# xdelta_patcher_generator

./: Cargo.toml  README.md
patch_builder/: Cargo.toml  build.rs
patch_builder/src/: installer.rs  main.rs
patch_stub/: Cargo.toml
patch_stub/src/: main.rs
patch_types/: Cargo.toml
patch_types/src/: lib.rs
