[package]
name = "patch_builder"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
xdelta3 = "0.1"
blake3 = "1.8"
bincode = "2"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
path-slash = "0.2"
indicatif = "0.18"
rayon = "1.11"
patch_types = { path = "../patch_types" }

[build-dependencies]
winres = "0.1"
